--- a/src/components/Home/Contact/Contact.css
+++ b/src/components/Home/Contact/Contact.css
@@ -1,11 +1,11 @@
 .contact form input {
     width: 100%;
-    margin: 10px;
+    margin: 10px 0px;
     padding: 10px;
 }
 
 .contact form {
     background: #ddd;
-    padding: 100px;
+    padding: 100px 50px;
     margin: 50px 0px;
 }
