--- a/src/components/Home/Contact/Contact.css
+++ b/src/components/Home/Contact/Contact.css
@@ -2,10 +2,13 @@
     width: 100%;
     margin: 10px 0px;
     padding: 10px;
+    border-radius: 10px;
+    border: none;
 }
 
 .contact form {
     background: #ddd;
     padding: 100px 50px;
     margin: 50px 0px;
+    border-radius: 10px;
 }
